# fps_yolo_ai

./: .gitignore  USAGE.md  example_subjects_usage.py  makefile  pyproject.toml  readme.md  requirements.txt  test_hotkey.py  test_mouse_monitor.py  test_pid_component.py  test_pydirectinput_mouse.py  test_steam_mouse.py  test_windows_mouse.py
src/: main.py
src/data_center/: index.py  index_type.py  init_state.py  test.py
src/data_center/models/: base_state.py  base_state_bk.py
src/fps_models/: aimlabs.py
src/functions/: get_pid_res.py  get_sight_images.py  get_target_vector.py  ims_show.py  run_move_mouse.py
src/pyside/basic/: basic_layout.py  basic_window.py
src/pyside/fps_ai_ui/: index.py  main.py
src/pyside/learn/: 01_simple_window.py  02_add_button.py  03_button_click.py  04_add_label.py  05_simple_layout.py  06_vertical_layout.py  07_horizontal_layout.py  08_mixed_layout.py  10_deep_layout.py  11_very_deep_layout.py  12_input_examples.py  13_slider_examples.py  14_advanced_controls.py  15_grid_layout.py  16_grid_buttons.py  17_grid_span.py  18_multi_screen.py  19_screen_position.py  20_default_screen.py  21_multiple_layouts.py  22_nested_layouts.py  23_dynamic_layouts.py  24_groupbox_styles.py  test.py
src/singleton_classes/: data_center.py  data_state.py  test_json_state.py
src/singleton_classes/controller/: controller.py
src/test/: pyadrc_animation.py  test.py  test_base_state copy.py  test_base_state.py  test_pyautogui_monitor.py  test_singleton.py
src/utils/: image_converter.py  img_show.py  singleton.py
src/utils/kalman/: kaerman_fps.py
(+141 files in other folders)
