[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fps_ai"
version = "0.1.0"
description = "FPS AI project"
authors = [
    { name = "panda", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["./src"]
